--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Chocolate Recipe</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
+
 <body>
-    <h1>Przepis na gorącą czekoladę</h1>
+    <div>
+        <h1>Wybierz świąteczną piosenkę, do której przygotujesz swoją gorącą czekoladę</h1>
+        <button onclick="feliz()">Feliz Navidat</button>
+        <button onclick="last()">Last Christmas</button>
+        <button onclick="alli()">All I want for Christmas is you</button>
+        <audio id="song" controls>
+
+        </audio>
+
+        <h2>Przepis na gorącą czekoladę:</h1>
+        <ul>
+            <li>Zrób to</li>
+            <li>Potem to</li>
+            <li>Potem tamto</li>
+        </ul>
+        <h3>Smacznego !!!</h2>
+    </div>
 </body>
+
 </html>
