--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         </audio>
 
-        <h2>Przepis na gorącą czekoladę:</h1>
+        <h2>Do przygotowania gorącej czekolady potrzebujesz:</h1>
         <ul>
-            <li>Zrób to</li>
-            <li>Potem to</li>
-            <li>Potem tamto</li>
+            <li>3 szklanki mleka</li>
+            <li>mix gorącej czekolady w słoiczku</li>
         </ul>
+        <p>Podgrzej mleko na małej mocy palnika. Do ciepłego mleka wsyp kakao i cukier ze słoiczka, uprzednio wyciągając z niego pianki i kawałki czekolady. Po zagotowaniu kakao zdejmij garnek z palnika. Od razu dodaj kawałki czekolady i mieszaj do uzyskania jednolitej konsystencji. Przelej czekoladę do ulubionego kubka i udekoruj bitą śmietaną i piankami.</p>
         <h3>Smacznego !!!</h2>
     </div>
 </body>
