--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Chocolate Recipe</title>
+    <title>Cipasonkowa Czekolada</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
     <div>
-        <h1>Wybierz świąteczną piosenkę, do której przygotujesz swoją gorącą czekoladę</h1>
+        <h1>Wybierz świąteczną piosenkę, do której przygotujesz swoją Cipasonkową czekoladę</h1>
         <button onclick="feliz()">Feliz Navidat</button>
         <button onclick="last()">Last Christmas</button>
         <button onclick="alli()">All I want for Christmas is you</button>
@@ -19,12 +19,12 @@
 
         </audio>
 
-        <h2>Do przygotowania gorącej czekolady potrzebujesz:</h1>
+        <h2>Do przygotowania Cipasonkowej czekolady potrzebujesz:</h1>
         <ul>
             <li>3 szklanki mleka</li>
-            <li>mix gorącej czekolady w słoiczku</li>
+            <li>mix Cipasonkowej czekolady w słoiczku</li>
         </ul>
-        <p>Podgrzej mleko na małej mocy palnika. Do ciepłego mleka wsyp kakao i cukier ze słoiczka, uprzednio wyciągając z niego pianki i kawałki czekolady. Po zagotowaniu kakao zdejmij garnek z palnika. Od razu dodaj kawałki czekolady i mieszaj do uzyskania jednolitej konsystencji. Przelej czekoladę do ulubionego kubka i udekoruj bitą śmietaną i piankami.</p>
+        <p>Podgrzej mleko na małej mocy palnika. Do ciepłego mleka wsyp kakao i cukier ze słoiczka, uprzednio wyciągając z niego pianki i kawałki czekolady. Po zagotowaniu kakao zdejmij garnek z palnika. Od razu dodaj kawałki czekolady i mieszaj do uzyskania jednolitej konsystencji. Przelej czekoladę do ulubionego kubka, udekoruj bitą śmietaną i piankami.</p>
         <h3>Smacznego !!!</h2>
     </div>
 </body>
