--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div>
-        <h1>Wybierz świąteczną piosenkę, do której przygotujesz swoją Cipasonkową czekoladę</h1>
+        <h1>Na początek</h1>
+        <p>Wybierz świąteczną piosenkę, do której przygotujesz swoją Cipasonkową czekoladę</p>
         <button onclick="feliz()">Feliz Navidat</button>
         <button onclick="last()">Last Christmas</button>
         <button onclick="alli()">All I want for Christmas is you</button>
@@ -19,13 +20,14 @@
 
         </audio>
 
-        <h2>Do przygotowania Cipasonkowej czekolady potrzebujesz:</h1>
+        <h2>Na Cipasonkową czekoladę potrzebujesz :</h1>
+        <br>
         <ul>
             <li>3 szklanki mleka</li>
             <li>mix Cipasonkowej czekolady w słoiczku</li>
         </ul>
         <p>Podgrzej mleko na małej mocy palnika. Do ciepłego mleka wsyp kakao i cukier ze słoiczka, uprzednio wyciągając z niego pianki i kawałki czekolady. Po zagotowaniu kakao zdejmij garnek z palnika. Od razu dodaj kawałki czekolady i mieszaj do uzyskania jednolitej konsystencji. Przelej czekoladę do ulubionego kubka, udekoruj bitą śmietaną i piankami.</p>
-        <h3>Smacznego !!!</h2>
+        <h3>Zdrówko!</h3>
     </div>
 </body>
 
